Fix spacing

--- a/src/components/gallery.module.css
+++ b/src/components/gallery.module.css
@@ -1,5 +1,6 @@
 .gallery {
   display: grid;
   grid-gap: 40px;
-  grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px,1fr));
+  margin-top: 40px;
 }
